<resources>
    <string name="app_name">EjemploApp</string>
    <string name="base_url">http://10.0.0.5:1337/</string>
    <string name="access_token">access_toke</string>

    <string name="btnRegistro">Regístrate</string>
    <string name="Login">Login</string>
    <string name="Principal">Principal</string>
    <string name="btnIniciarSesion">Iniciar sesión</string>
    <string name="txtEmail">Email</string>
    <string name="txtContraseña">Contraseña</string>


    <string name="nombre">Nombre</string>
    <string name="modelo">Modelo</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripción</string>
    <string name="btnagregar">Guardar</string>
    <string name="btnDelete">Borrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>